--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         ><img src="Images/snlogo-removebg-preview.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="CV.html">CV</a>
