--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         ><img src="Images/snlogo-removebg-preview.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
-        <a href="Index.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="CV.html">CV</a>
