--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         ><img src="Images/snlogo-removebg-preview.png" alt="Simon Nilsson Logo"
       /></a>
       <nav class="navbar">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html" class="active">Portfolio</a>
         <a href="CV.html">CV</a>
