--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="Index.html" class="logo"
+      <a href="index.html" class="logo"
         ><img src="Images/snlogo-removebg-preview.png" alt="Simon Nilsson Logo"
       /></a>
       <nav class="navbar">
