--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="Index.html" class="logo"
+      <a href="index.html" class="logo"
         ><img src="Images/snlogo-removebg-preview.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
