--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="logo"
-        ><img src="Images/snlogo-removebg-preview.png" alt="Simon N Logo"
+        ><img src="Images/logo labb2.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
         <a href="index.html" class="active">Home</a>
@@ -43,7 +43,7 @@
     </div>
     <section id="profile">
       <div class="section-pic-container">
-        <img src="/Images/simon.jpg" alt="Simon Profile Picture" />
+        <img src="/Images/simon labb2.jpg" alt="Simon Profile Picture" />
       </div>
       <div class="section-text">
         <p class="section-text-p1">Hello, I'm</p>
@@ -60,20 +60,20 @@
             href="https://www.linkedin.com/in/simon-nilsson-925992185/"
             target="_blank"
             ><img
-              src="Images/Linkedin.png"
+              src="/Images/Linkedin labb2.png"
               alt="My LinkedIn profile."
               class="icon"
           /></a>
 
           <a href="https://github.com/simonnilsson9" target="_blank"
             ><img
-              src="/Images/Github.png"
+              src="/Images/Github labb2.png"
               alt="My Github profile."
               class="icon"
           /></a>
 
           <a href="mailto:simon.nilsson.10@gmail.com" target="_blank"
-            ><img src="/Images/e-mail.png" alt="My e-mail adress." class="icon"
+            ><img src="/Images/e-mail labb2.png" alt="My e-mail adress." class="icon"
           /></a>
         </div>
       </div>
