--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="logo"
-        ><img src="Images/snlogo-removebg-preview.png" alt="Simon Nilsson Logo"
+        ><img src="Images/logo labb2.png" alt="Simon Nilsson Logo"
       /></a>
       <nav class="navbar">
         <a href="index.html">Home</a>
@@ -78,7 +78,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/Images/ATM.jpg"
+                src="/Images/ATM labb2.jpg"
                 alt="Project 1 ATM/Bank"
                 class="project-img"
               />
@@ -101,7 +101,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/Images/Sharp Shooters Bank.jpg"
+                src="/Images/Sharp Shooters Bank labb2.jpg"
                 alt="Project 2 Sharp Shooters Bank"
                 class="project-img"
               />
@@ -124,7 +124,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/Images/School-Database.jpg"
+                src="/Images/School-Database labb2.jpg"
                 alt="Project 3 School Database"
                 class="project-img"
               />
