--- a/CV.html
+++ b/CV.html
@@ -13,10 +13,10 @@
   <body>
     <header class="header">
       <a href="index.html" class="logo"
-        ><img src="Images/snlogo-removebg-preview.png" alt="Simon N Logo"
+        ><img src="/Images/logo labb2.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="CV.html" class="active">CV</a>
