hopefully the images will show up now

--- a/CV.html
+++ b/CV.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="logo"
-        ><img src="/Images/logo labb2.png" alt="Simon N Logo"
+        ><img src="Images/logo labb2.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
         <a href="index.html">Home</a>
