--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="logo"
-        ><img src="/Images/logo labb2.png" alt="Simon N Logo"
+        ><img src="Images/logo labb2.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
         <a href="index.html">Home</a>
@@ -46,7 +46,7 @@
       <div class="section-container">
         <div class="section--pic-container">
           <img 
-            src="/Images/aboutme labb2.jpg"
+            src="Images/aboutme labb2.jpg"
             alt="Profile picture"
             class="about-pic"
             id="odd-part"
@@ -55,7 +55,7 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img src="/Images/work labb2.png" alt="Work" class="icon" />
+              <img src="Images/work labb2.png" alt="Work" class="icon" />
               <h3>Work Experience</h3>
               <br />
               <p>
@@ -63,7 +63,7 @@
               </p>
             </div>
             <div class="details-container">
-              <img src="/Images/education labb2.png" alt="Education" class="icon" />
+              <img src="Images/education labb2.png" alt="Education" class="icon" />
               <h3>Education</h3>
               <br />
               <p>
