--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="logo"
-        ><img src="/Images/logo labb2.png" alt="Simon N Logo"
+        ><img src="Images/logo labb2.png" alt="Simon N Logo"
       /></a>
       <nav class="navbar">
         <a href="index.html">Home</a>
@@ -46,7 +46,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="/Images/e-mail labb2.png"
+            src="Images/e-mail labb2.png"
             alt="e-mail"
             class="icon contact-icon-email"
           />
@@ -58,7 +58,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="/Images/Linkedin labb2.png"
+            src="Images/Linkedin labb2.png"
             alt="LinkedIn"
             class="icon contact-icon"
           />
@@ -70,7 +70,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="/Images/Github labb2.png"
+            src="Images/Github labb2.png"
             alt="Github"
             class="icon contact-icon"
           />
@@ -80,7 +80,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="/Images/phone labb2.png"
+            src="Images/phone labb2.png"
             alt="phone"
             class="icon contact-icon-phone"
           />
