--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/Images/ATM labb2.jpg"
+                src="Images/ATM labb2.jpg"
                 alt="Project 1 ATM/Bank"
                 class="project-img"
               />
@@ -101,7 +101,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/Images/Sharp Shooters Bank labb2.jpg"
+                src="Images/Sharp Shooters Bank labb2.jpg"
                 alt="Project 2 Sharp Shooters Bank"
                 class="project-img"
               />
@@ -124,7 +124,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/Images/School-Database labb2.jpg"
+                src="Images/School-Database labb2.jpg"
                 alt="Project 3 School Database"
                 class="project-img"
               />
