--- a/CV.html
+++ b/CV.html
@@ -74,6 +74,6 @@
         <span class="designer">Simon Nilsson</span>
       </p>
     </footer>
-    <script src="./JavaScript/script.js"></script>
+    <script src="JavaScript/script.js"></script>
   </body>
 </html>
