--- a/about.html
+++ b/about.html
@@ -120,6 +120,6 @@
         <span class="designer">Simon Nilsson</span>
       </p>
     </footer>
-    <script src="./JavaScript/script.js"></script>
+    <script src="JavaScript/script.js"></script>
   </body>
 </html>
