--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
         <span class="designer">Simon Nilsson</span>
       </p>
     </footer>
-    <script src="./JavaScript/script.js"></script>
+    <script src="JavaScript/script.js"></script>
   </body>
 </html>
